--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
   </head>
   <body>
     <div class="container">
-      <h1>GitHub User Lookup</h1>
-      <div class="box">
-        <label for="username">Enter a a username:</label>
-        <input id="username" type="text">
-        <button class="button" id="submitUsername">Submit</button>
-        <div class="showResults"></div>
+      <h1><img src="http://bit.ly/2aAvdGI" alt="magnifying glass">GitHub User Lookup</h1>
+      <hr>
+      <h3>See a GitHub user's public repository names and descriptions!</h3>
+      <div class="form-group">
+        <input required class="form-control" id="username" type="text" placeholder="Enter any GitHub username here...">
+      </div>
+      <button class="btn btn-success" id="submitUsername">Submit</button>
+      <hr>
+      <div id="resultHeader">
+        <p>Here are this user's first 100 repos:</p>
+      </div>
+      <div class="showResults">
       </div>
     </div>
   </body>
