add styles to result output

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button class="btn btn-success" id="submitUsername">Submit</button>
       <hr>
       <div id="resultHeader">
-        <p>Here are this user's first 100 repos:</p>
+        <p>Here are this user's repos:</p>
       </div>
       <div class="showResults">
       </div>
