display username and user location

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </div>
       <button class="btn btn-success" id="submitUsername">Submit</button>
       <hr>
-      <div id="resultHeader">
-        <p>Here are this user's repos:</p>
-      </div>
+      <h4><div id="resultName"></div></h4>
+      <h4><div id="resultLocation"></div></h4>
+      <br>
       <ol>
       <div class="showResults"></div>
       </ol>
