--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </div>
       <button class="btn btn-success" id="submitUsername">Submit</button>
       <hr>
+      <div id="resultPhoto"></div>
       <h4><div id="resultName"></div></h4>
       <h4><div id="resultLocation"></div></h4>
       <br>
