update text in subtitle

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1><img src="http://bit.ly/2aAvdGI" alt="magnifying glass">GitHub User Lookup</h1>
       <hr>
-      <h3>See a GitHub user's public repository names and descriptions!</h3>
+      <h3>Find a GitHub user's public repositories!</h3>
       <div class="form-group">
         <input required class="form-control" id="username" type="text" placeholder="Enter any GitHub username here...">
       </div>
